made the html heading section but missing a picture

--- a/index.html
+++ b/index.html
@@ -7,4 +7,30 @@
         <title>Cool Landing Page</title>
         <link rel="stylesheet" href="style.css">
     </head>
+
+    <body>
+        <div class="header">
+            The Header logo is here
+        </div>
+        
+        <div class="right-links">
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">What do we do</a></li>
+                <li><a href="#"> Where are we</a></li>
+            </ul>
+        </div>
+
+        <div class="hero">
+            First landing page
+        </div>
+        <div class="hero-sub">
+            Here we are better than any other tax preparer in Chicago. We are better than the<span style="color:aqua">IRS</span>
+        </div>
+        <div class="buttons">
+            <button>Sign up</button>
+            <button>Sign up</button>
+        </div>
+
+    </body>
 </html>
