add new image and intergrate it into the landing page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
 
     <body>
+        <!-- This is the header and the hero section of the web page-->
         <div class="header">
             The Header logo is here
         </div>
@@ -29,8 +30,31 @@
         </div>
         <div class="buttons">
             <button>Sign up</button>
-            <button>Sign up</button>
+        </div>
+        <div class="hero-pic">
+            <img src="inside.jpg" alt="inside an office">
+        </div>
+        <!-- end of the header and hero section-->
+
+        <!--This is some information-->
+        <div class="2h">
+            Some cool information about the website
         </div>
 
+        <div class="subtexts">
+            <div class="info">
+                Here is some subtext under a square
+            </div>
+            <div class="info">
+                Here is some subtext under a square
+            </div>
+            <div class="info">
+                Here is some subtext under a square
+            </div>
+            <div class="info">
+                Here is some subtext under a square
+            </div>
+        </div>
+        <!--This is the end of the second section-->
     </body>
 </html>
