add review in the third section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <!-- This is the header and the hero section of the web page-->
+        <!--Header and the hero section-->
         <div class="header">
             The Header logo is here
         </div>
@@ -34,7 +34,7 @@
         <div class="hero-pic">
             <img src="inside.jpg" alt="inside an office">
         </div>
-        <!-- end of the header and hero section-->
+        <!--End of the header and hero section-->
 
         <!--This is some information-->
         <div class="2h">
@@ -55,6 +55,15 @@
                 Here is some subtext under a square
             </div>
         </div>
-        <!--This is the end of the second section-->
+        <!--End of the second section-->
+
+        <!--Third section with a review-->
+        <div class="quote">
+            I love doing my taxes here! Great service and I will be returning next year to do my taxes again!
+        </div>
+        <div class="quouter">
+            Some happy guy
+        </div>
+        <!--End of third section-->
     </body>
 </html>
