add call to hero sction in html

--- a/index.html
+++ b/index.html
@@ -65,5 +65,19 @@
             Some happy guy
         </div>
         <!--End of third section-->
+
+        <!--Fourth Section with call to action-->
+        <div class="Call">
+            It is time to call to action!
+        </div>
+        <div class="subsec">
+            Make an appointment today to get your free estimate
+        </div>
+        <div class="buttons">
+            <button>Sign up</button>
+        </div>
+        <!--End of call to action-->
+
+        <!-- Footer-->
     </body>
 </html>
