add footer and finish the structure of the html file

--- a/index.html
+++ b/index.html
@@ -79,5 +79,9 @@
         <!--End of call to action-->
 
         <!-- Footer-->
+         <div class="footer">
+            Visa, Paypal, Mastercard
+         </div>
+        <!--End of footer-->
     </body>
 </html>
