style the header logo and the text; need more work

--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     </head>
 
     <body>
-        <!--Header and the hero section-->
+        <!--Header-->
         <div class="header">
-            The Header logo is here
-        </div>
+            <div class="header-logo">
+                The Header logo is here
+            </div>
         
-        <div class="right-links">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">What do we do</a></li>
-                <li><a href="#"> Where are we</a></li>
-            </ul>
+            <div class="right-links">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">What do we do</a></li>
+                    <li><a href="#"> Where are we</a></li>
+                </ul>
+            </div>
         </div>
-
+        <!--End of Header-->
+        <!-- Start of hero section-->
         <div class="hero">
             First landing page
         </div>
