--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!--Header-->
         <div class="header">
             <div class="header-logo">
-                The Header logo is here
+                lefyzee Inc.
             </div>
         
             <div class="right-links">
