style the text but no flexbox. Info section is not working

--- a/index.html
+++ b/index.html
@@ -31,32 +31,24 @@
         <div class="hero-sub">
             Here we are better than any other tax preparer in Chicago. We are better than the<span style="color:aqua">IRS</span>
         </div>
-        <div class="buttons">
-            <button>Sign up</button>
-        </div>
+        <button class="sign">
+            Sign up
+        </button>
         <div class="hero-pic">
             <img src="inside.jpg" alt="inside an office">
         </div>
-        <!--End of the header and hero section-->
+        <!--End of hero section-->
 
         <!--This is some information-->
-        <div class="2h">
+        <div class="information-head">
             Some cool information about the website
         </div>
 
         <div class="subtexts">
-            <div class="info">
-                Here is some subtext under a square
-            </div>
-            <div class="info">
-                Here is some subtext under a square
-            </div>
-            <div class="info">
-                Here is some subtext under a square
-            </div>
-            <div class="info">
-                Here is some subtext under a square
-            </div>
+            <div class="inpo">Here is some subtext under a square</div>
+            <div class="inpo">Here is some subtext under a square</div>
+            <div class="inpo">Here is some subtext under a square</div>
+            <div class="inpo">Here is some subtext under a square</div>
         </div>
         <!--End of the second section-->
 
@@ -76,9 +68,9 @@
         <div class="subsec">
             Make an appointment today to get your free estimate
         </div>
-        <div class="buttons">
-            <button>Sign up</button>
-        </div>
+        <button class="second-button">
+            Sign up
+        </button>
         <!--End of call to action-->
 
         <!-- Footer-->
